# signal-webrtc

./: BUILD.gn
api/: BUILD.gn  peer_connection_interface.h  peer_connection_proxy.h  priority.h
api/audio_codecs/: audio_encoder.h
api/video/: video_codec_type.h
audio/: audio_send_stream.cc  audio_send_stream.h  channel_receive.cc
build_overrides/: build.gni
call/: rtp_demuxer.cc  rtp_payload_params.cc
examples/: BUILD.gn
examples/aarproject/app/: build.gradle
examples/androidnativeapi/: AndroidManifest.xml  BUILD.gn
examples/androidvoip/: AndroidManifest.xml  BUILD.gn
examples/unityplugin/: ANDROID_INSTRUCTION  class_reference_holder.cc  simple_peer_connection.cc
media/base/: media_channel.h
media/engine/: webrtc_video_engine.cc  webrtc_voice_engine.cc  webrtc_voice_engine.h
modules/audio_coding/audio_network_adaptor/: config.proto
modules/audio_device/: BUILD.gn  audio_device_impl.cc
modules/audio_device/android/: audio_manager.cc  audio_record_jni.cc  audio_track_jni.cc  build_info.cc  build_info.h
modules/audio_device/linux/: audio_device_pulse_linux.h
modules/audio_device/mac/: audio_device_mac.cc
modules/rtp_rtcp/source/: rtp_sender_video.cc
modules/utility/include/: jvm_android.h
modules/utility/source/: jvm_android.cc
modules/video_coding/svc/: scalability_structure_full_svc_unittest.cc
p2p/: BUILD.gn
p2p/base/: fake_port_allocator.h  ice_transport_internal.h  p2p_transport_channel.cc  port_allocator.h
p2p/client/: basic_port_allocator.cc
pc/: channel.cc  channel.h  jsep_transport_controller.cc  jsep_transport_controller.h  media_session.cc  media_session.h  peer_connection.cc  peer_connection.h  peer_connection_factory.cc  peer_connection_wrapper.cc  rtp_transport.cc  sdp_offer_answer.cc
rtc_base/: BUILD.gn  network_monitor.h
sdk/: BUILD.gn
sdk/android/: AndroidManifest.xml  BUILD.gn  README
sdk/android/api/org/cachy/: AudioDecoderFactoryFactory.java  AudioEncoderFactoryFactory.java  AudioProcessingFactory.java  AudioSource.java  AudioTrack.java  BuiltinAudioDecoderFactoryFactory.java  BuiltinAudioEncoderFactoryFactory.java  CallSessionFileRotatingLogSink.java  Camera1Capturer.java  Camera1Enumerator.java  Camera2Capturer.java  Camera2Enumerator.java  CameraEnumerationAndroid.java  CameraEnumerator.java  CameraVideoCapturer.java  CandidatePairChangeEvent.java  CapturerObserver.java  CryptoOptions.java  DataChannel.java  DefaultVideoDecoderFactory.java  DefaultVideoEncoderFactory.java  DtmfSender.java  EglBase.java  EglBase10.java  EglBase14.java  EglRenderer.java  EncodedImage.java  FecControllerFactoryFactoryInterface.java  FileVideoCapturer.java  FrameDecryptor.java  FrameEncryptor.java  GlRectDrawer.java  GlShader.java  GlTextureFrameBuffer.java  GlUtil.java  HardwareVideoDecoderFactory.java  HardwareVideoEncoderFactory.java  IceCandidate.java  JavaI420Buffer.java  LibvpxVp8Decoder.java  (+66 more)
sdk/android/api/org/cachy/audio/: AudioDeviceModule.java  JavaAudioDeviceModule.java  LegacyAudioDeviceModule.java
sdk/android/instrumentationtests/: AndroidManifest.xml
sdk/android/instrumentationtests/src/org/cachy/: AndroidVideoDecoderInstrumentationTest.java  BuiltinAudioCodecsFactoryFactoryTest.java  Camera1CapturerUsingByteBufferTest.java  Camera1CapturerUsingTextureTest.java  Camera2CapturerTest.java  CameraVideoCapturerTestFixtures.java  DefaultVideoEncoderFactoryTest.java  EglRendererTest.java  FileVideoCapturerTest.java  GlRectDrawerTest.java  HardwareVideoEncoderTest.java  LoggableTest.java  NetworkMonitorTest.java  PeerConnectionEndToEndTest.java  PeerConnectionFactoryTest.java  PeerConnectionTest.java  RendererCommonTest.java  RtcCertificatePemTest.java  RtpSenderTest.java  RtpTransceiverTest.java  SurfaceTextureHelperTest.java  SurfaceViewRendererOnMeasureTest.java  TestConstants.java  TimestampAlignerTest.java  VideoFileRendererTest.java  VideoFrameBufferTest.java  VideoTrackTest.java  WebRtcJniBootTest.java  YuvHelperTest.java
sdk/android/native_unittests/org/cachy/: ApplicationContextProvider.java  BuildInfo.java  CodecsWrapperTestHelper.java  FakeVideoEncoder.java  JavaTypesTestHelper.java  JavaVideoSourceTestHelper.java  PeerConnectionFactoryInitializationHelper.java
sdk/android/src/java/org/cachy/: AndroidVideoDecoder.java  BaseBitrateAdjuster.java  BitrateAdjuster.java  CalledByNative.java  CalledByNativeUnchecked.java  Camera1Session.java  Camera2Session.java  CameraCapturer.java  CameraSession.java  DynamicBitrateAdjuster.java  EglBase10Impl.java  EglBase14Impl.java  Empty.java  FramerateBitrateAdjuster.java  GlGenericDrawer.java  H264Utils.java  HardwareVideoEncoder.java  Histogram.java  JNILogging.java  JniCommon.java  JniHelper.java  MediaCodecUtils.java  MediaCodecVideoDecoderFactory.java  MediaCodecWrapper.java  MediaCodecWrapperFactory.java  MediaCodecWrapperFactoryImpl.java  NV12Buffer.java  NV21Buffer.java  NativeAndroidVideoTrackSource.java  NativeCapturerObserver.java  NativeLibrary.java  RefCountDelegate.java  VideoCodecMimeType.java  VideoDecoderWrapper.java  VideoEncoderWrapper.java  WebRtcClassLoader.java  WrappedNativeI420Buffer.java
sdk/android/src/java/org/cachy/audio/: LowLatencyAudioBufferManager.java  VolumeLogger.java  WebRtcAudioEffects.java  WebRtcAudioManager.java  WebRtcAudioRecord.java  WebRtcAudioTrack.java  WebRtcAudioUtils.java
sdk/android/src/jni/: encoded_image.cc  jni_helpers.h
sdk/android/src/jni/pc/: ice_candidate.cc  media_stream.cc  stats_observer.cc
sdk/android/tests/src/org/cachy/: AndroidVideoDecoderTest.java  CameraEnumerationTest.java  CodecTestHelper.java  CryptoOptionsTest.java  FakeMediaCodecWrapper.java  GlGenericDrawerTest.java  HardwareVideoEncoderTest.java  IceCandidateTest.java  RefCountDelegateTest.java  ScalingSettingsTest.java
sdk/android/tests/src/org/cachy/audio/: LowLatencyAudioBufferManagerTest.java
sdk/objc/: Info.plist
test/: BUILD.gn
test/android/: AndroidManifest.xml
test/mac/: Info.plist
tools_webrtc/android/: release_aar.py
tools_webrtc/ios/: build_ios_libs.py
video/: buffered_frame_decryptor.cc
(+53 files in other folders)
